# mtc-simulation

./: .gitignore
mtcg4sim/: .CMakeLists.txt.swp  CMakeLists.txt  GNUmakefile  Makefile  mtcg4sim.cc
mtcg4sim/include/: .MTCG4EventAction.hh.swp  .MTCG4RunAction.hh.swp  .MTCG4SteppingAction.hh.swp  .StepRootIO.hh.swp  .StepTextIO.hh.swp  MTCG4CollectionOfNeutronSteps.hh  MTCG4DetectorConstruction.hh  MTCG4DetectorMessenger.hh  MTCG4EventAction.hh  MTCG4HitPhoton.hh  MTCG4HitPmt.hh  MTCG4HitPmtCollection.hh  MTCG4PhysicsList.hh  MTCG4PhysicsList.hh_kamland__  MTCG4PhysicsMessenger.hh__  MTCG4PmtOpticalModel.hh  MTCG4PrimaryGeneratorAction.hh  MTCG4PrimaryGeneratorMessenger.hh  MTCG4RunAction.hh  MTCG4RunMessenger.hh  MTCG4StackingAction.hh  MTCG4StackingMessenger.hh  MTCG4SteppingAction.hh  MTCG4SteppingMessenger.hh  MTCG4TrackingAction.hh  PESdsIO.hh  StepRootIO.hh  StepTextIO.hh
mtcg4sim/mac/batch/: batch.sh  condor_batch.cmd  condor_batch_template.cmd  generate_batch_files.sh  generate_mac.sh  template.mac
mtcg4sim/mac/default/: run.mac  vis.mac
mtcg4sim/mac/movie/: movie.loop  movie.mac  movie_fast.loop
mtcg4sim/mtc_cad/: frameEndClamp2.stl  frameEndClamp5.stl  frameEndClamp7.stl  frameEndClamp8.stl  frameSideClamp1.stl  frameSideClamp10.stl  frameSideClamp12.stl  frameSideClamp14.stl  frameSideClamp15.stl  frameSideClamp16.stl  frameSideClamp2.stl  frameSideClamp4.stl  frameSideClamp6.stl  frameSideClamp8.stl  frameSideClamp9.stl  frameSidePlate1.stl  frameSidePlate3.stl  leg1.stl  leg3.stl
mtcg4sim/src/: .MTCG4EventAction.cc.swp  .MTCG4RunAction.cc.swp  .MTCG4SteppingAction.cc.swp  .MTCG4SteppingMessenger.cc.swp  .StepRootIO.cc.swp  .StepTextIO.cc.swp  MTCG4DetectorConstruction.cc  MTCG4DetectorConstruction_Material.cc  MTCG4DetectorConstruction_Peripheral.cc  MTCG4DetectorConstruction_Pmt.cc  MTCG4DetectorConstruction_Pmt.cc-snippet  MTCG4DetectorConstruction_Scintillator.cc  MTCG4DetectorConstruction_Visualization.cc  MTCG4DetectorConstruction_World.cc  MTCG4DetectorMessenger.cc  MTCG4EventAction.cc  MTCG4HitPhoton.cc  MTCG4HitPmt.cc  MTCG4HitPmtCollection.cc  MTCG4PhysicsList.cc  MTCG4PhysicsMessenger.cc__  MTCG4PmtOpticalModel.cc  MTCG4PmtOpticalModel.cc-snippet  MTCG4PrimaryGeneratorAction.cc  MTCG4PrimaryGeneratorMessenger.cc  MTCG4RunAction.cc  MTCG4RunMessenger.cc  MTCG4StackingAction.cc  MTCG4StackingMessenger.cc  MTCG4SteppingAction.cc  MTCG4SteppingMessenger.cc  MTCG4TrackingAction.cc  MTCG4Trajectory.cc  PESdsIO.cc  StepRootIO.cc  StepTextIO.cc
mtcg4sim/tags/trunk/: CMakeLists.txt  GNUmakefile  README.txt  make_run.sh  mtc.cc  run.mac  vis.mac
mtcg4sim/tags/trunk/include/: MTCG4DetectorConstruction.hh  MTCG4DetectorMessenger.hh  MTCG4EventAction.hh  MTCG4PhysicsList.hh  MTCG4PhysicsMessenger.hh  MTCG4PixelHit.hh  MTCG4PixelSD.hh  MTCG4PrimaryGeneratorAction.hh  MTCG4PrimaryGeneratorMessenger.hh  MTCG4RunAction.hh  MTCG4StackingAction.hh  MTCG4SteppingAction.hh  MTCG4SteppingMessenger.hh_  MTCG4TrackingAction.hh  MTCG4Trajectory.hh
mtcg4sim/tags/trunk/src/: MTCG4DetectorConstruction.cc  MTCG4DetectorMessenger.cc  MTCG4EventAction.cc  MTCG4PhysicsList.cc  MTCG4PhysicsMessenger.cc  MTCG4PixelHit.cc  MTCG4PixelSD.cc  MTCG4PrimaryGeneratorAction.cc  MTCG4PrimaryGeneratorMessenger.cc  MTCG4RunAction.cc  MTCG4StackingAction.cc  MTCG4SteppingAction.cc  MTCG4SteppingMessenger.cc  MTCG4SteppingMessenger.cc_  MTCG4TrackingAction.cc  MTCG4Trajectory.cc
mtcg4sim/trunk/: CMakeLists.txt  README.txt
mtcg4sim/trunk/include/: MTCG4PhysicsList.hh  MTCG4PmtSD.hh  MTCG4RunAction.hh  MTCG4StackingAction.hh  MTCG4SteppingAction.hh  MTCG4TrackingAction.hh  MTCG4Trajectory.hh
mtcg4sim/trunk/mac/batch/: condor_batch.cmd
mtcg4sim/trunk/mac/default/: run-old.mac  run.mac
mtcg4sim/trunk/mac/movie/: movie_slow.loop
mtcg4sim/trunk/mtc_cad/: cube.stl  frameEndClamp1.stl  frameEndClamp3.stl  frameEndClamp4.stl  frameEndClamp6.stl  frameEndPlate1.stl  frameEndPlate2.stl  frameSideClamp11.stl  frameSideClamp13.stl  frameSideClamp3.stl  frameSideClamp5.stl  frameSideClamp7.stl  frameSidePlate2.stl  frameSidePlate4.stl  leg2.stl  leg4.stl
mtcg4sim/trunk/src/: MTCG4DetectorMessenger.cc  MTCG4HitPhoton.cc  MTCG4PhysicsList.cc_kamland__  MTCG4PmtOpticalModel.cc  MTCG4PmtSD.cc  MTCG4PrimaryGeneratorMessenger.cc  MTCG4SteppingAction.cc  MTCG4SteppingMessenger.cc  MTCG4TrackingAction.cc  StepRootIO.cc  StepTextIO.cc
mtcg4sim/trunk/tools/: create_movie.sh
plot_mtcg4sim_output/: MTCG4SimOutput_RootPlot.cpp
plot_mtcg4sim_output/trunk/: MTCG4SimOutput_RootConvert.cpp  Makefile
primary_particle_generator/: Makefile  Makefile_template  generatePrimaryParticleData  generatePrimaryParticleData.cpp  multirun.sh
primary_particle_generator/trunk/: multirun.sh
read_mtc_sds_data/: CMakeLists.txt  Makefile  pe_for_run_0.root  read_mtc_sds_data.cpp
reconstruct_vertex_from_sds_data/: Makefile  README  plot_pmt_row_column_in_color.cpp  reconstruct_event.cpp
tools/libmtc-sds/: Makefile  libmtc-sds.cpp  libmtc-sds.hpp  main.cpp  sds-structures.hpp
